fixed the extra margin on flash message

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -74,6 +74,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 30px;
+    margin-bottom: 0;
 }
 
 .flash_message.success{
